--- a/AndroidCameraRecognition/app/src/main/res/values/strings.xml
+++ b/AndroidCameraRecognition/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">AndroidCameraRecognitionText</string>
+    <string name="action_settings">Options</string>
 </resources>
