--- a/AndroidCameraRecognition/app/src/main/res/values/strings.xml
+++ b/AndroidCameraRecognition/app/src/main/res/values/strings.xml
@@ -1,4 +1,8 @@
 <resources>
     <string name="app_name">AndroidCameraRecognitionText</string>
     <string name="action_settings">Options</string>
+
+    <string name="description_info">Info</string>
+    <string name="request_permission">This sample needs camera permission.</string>
+    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
 </resources>
